# backend-assessment

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt  sonar-project.properties
migrations/: env.py  script.py.mako
src/: __main__.py  api.py  auth.py  config.py  conftest.py  constants.py  db.py  main.py  middleware.py  test_auth.py  test_db.py  test_main.py
src/api/: deps.py
src/api/v1/: router.py  utils.py
src/events/: __init__.py  dummy.py  events.py  exceptions.py  test_events.py
src/model/: author.py  base.py  errors.py  post.py  user.py
src/persistence/: author.py  base.py  post.py  test_base.py  test_post.py  test_user.py  user.py
src/telemetry/: __init__.py  logging.py  test_logging.py
tests/: conftest.py  test_author.py  test_endpoints.py
